--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,5 @@
-<h1>.NET CORE & ANGULAR</h1>
+<app-nav></app-nav>
 
-<ul>
-  <li *ngFor="let user of users | async">
-    {{user.id}}-  {{user.userName}}
-  </li>
-</ul>
+<div class="container" style="margin-top: 100px;">
+  <router-outlet></router-outlet>
+</div>
